--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ curtsies==0.3.10
 cwcwidth==0.1.6
 Django==3.2.10
 django-extensions==3.2.0
+djangorestframework==3.14.0
 greenlet==1.1.2
 idna==3.3
 iniconfig==1.1.1
