--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+anyio==3.6.2
 asgiref==3.5.0
 attrs==21.4.0
 blessings==1.7
@@ -8,8 +9,13 @@ curtsies==0.3.10
 cwcwidth==0.1.6
 Django==3.2.10
 django-extensions==3.2.0
+django-filter==22.1
+django-sqlformatter==1.0.3
 djangorestframework==3.14.0
 greenlet==1.1.2
+h11==0.12.0
+httpcore==0.15.0
+httpx==0.23.0
 idna==3.3
 iniconfig==1.1.1
 mysqlclient==2.1.0
@@ -24,11 +30,13 @@ pytest-django==4.5.2
 pytz==2021.3
 pyxdg==0.28
 requests==2.28.1
+requests-unixsocket==0.3.0
+rfc3986==1.5.0
 six==1.16.0
+sniffio==1.3.0
 sqlparse==0.4.2
 tomli==2.0.1
 typing_extensions==4.3.0
 urllib3==1.26.11
 uWSGI==2.0.21
 uwsgitop==0.11
-
