<feat> : code base 수정 - src 디렉토리 생성 후 django 소스코드를 묶어둠 - uwsgi.sock 생성 경로를 /tmp/uwsgi.sock -> /tmp/shm/uwsgi.sock으로 변경함 - docker-compose 변경

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -22,7 +22,7 @@ http {
         error_log /var/log/nginx/error.log;
 
         location / {
-            uwsgi_pass unix:/tmp/mysite.sock;
+            uwsgi_pass unix:/tmp/shm/mysite.sock;
             include uwsgi_params;
         }
     }
