--- a/deployment/uwsgi_sock.ini
+++ b/deployment/uwsgi_sock.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-base = /usr/src/app
+base = /usr/src/app/src
 
 chdir = /usr/src/app
 module = config.wsgi
@@ -12,6 +12,6 @@ stats-http = true
 master = true
 processes = 10
 
-socket = /tmp/mysite.sock
+socket = /tmp/shm/mysite.sock
 chmod-socket = 777
 vacuum = true
