--- a/src/Makefile
+++ b/src/Makefile
@@ -1,13 +1,8 @@
-PYTHON=./venv/bin/python3
+PYTHON=../venv/bin/python3
 
 #  local에서 실행할 때
 run.local:
 	$(PYTHON) manage.py runserver 0.0.0.0:8000 --settings=config.settings.develop
-
-
-# docker 설정
-run.dev.db.docker:
-	cd ./.devdbcontainer && sudo docker-compose up -d
 
 # Test Application
 
