--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,15 +5,15 @@ services:
     build:
       context: .
     volumes:
-      - uwsgi_data:/tmp
-    command: uwsgi -i /usr/src/app/deployment/uwsgi_sock.ini
+      - uwsgi_data:/tmp/shm
+    command: uwsgi -i /usr/src/app/uwsgi_sock.ini
   reverse_proxy:
     image: nginx:1.21.6-alpine
     ports:
       - "8001:9901"
     volumes:
       - ./deployment/nginx.conf:/etc/nginx/nginx.conf
-      - uwsgi_data:/tmp/
+      - uwsgi_data:/tmp/shm
     depends_on:
       - django
 
